--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -112,13 +112,6 @@
     font-size: 50px;
 }
 
-.brands-slider-section h2 {
-    padding: 25px 25px 25px 0px;
-    color: #213446;
-    transition: color .6s ease;
-    font-size: 30px;
-}
-
 /* Home banners */
 .banners {
     display: flex;
@@ -173,23 +166,26 @@
 }
 
 /* Brands slider */
+.brands-slider-section h2 {
+    padding: 25px 25px 30px 0px;
+    margin: 0px;
+    color: #213446;
+    transition: color .6s ease;
+    font-size: 30px;
+}
+
 .brands-slider-container {
     display: flex;
     justify-content: space-around;
-    box-sizing: border-box;
-    width: calc(25%+25%+15%+10%);
-    margin: 0px 15px;
-    overflow: hidden;
-    /* animation: slider 10s linear infinite; */
+    width: 100%;
 }
-
 
 .brands-slider-container a:nth-child(1) {
     max-width: 25%;
 }
 
 .brands-slider-container a:nth-child(2) {
-    max-width: 25%;
+    max-width: 20%;
 }
 
 .brands-slider-container a:nth-child(3) {
@@ -204,14 +200,4 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-}
-
-@keyframes slider {
-    0% {
-        transform: translateX(0);
-    }
-
-    100% {
-        transform: translateX(0);
-    }
 }
